[JAVA 9] --patch-module pour la surcharge de String.java